<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_charts">

    <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@drawable/bg_linear"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/charts"
                android:textSize="24sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gameName"
                android:gravity="center"
                android:textSize="24sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gameScore"
                android:textSize="24sp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ryScores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/line1"
            android:layout_marginTop="10dp">


    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>